--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
   <body>
 
     <!-- Fixed navbar -->
-    <nav id="top-banner" class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div id="logo" class="navbar-header">
+	
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div id="nav-top" class="container">
+        <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <p class="navbar-brand">Project name</p>
         </div>
         <div id="navbar" class="navbar-collapse navbar-right">
           <ul class="nav navbar-nav dropdown-menu-right">
             <li class="dropdown">
-              <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span></a>
+              <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MENU  <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="hidden"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#">home</a></li>
                 <li><a href="#">about</a></li>
@@ -64,12 +64,14 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
+	
+	
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div id="title-banner" class="jumbotron">
       <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h1>belfast24</h1>
+        <p>polish radio</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
@@ -77,8 +79,10 @@
     <div id="main-content" class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div id="square-one" class="col-md-6 text-center">
-          <img src="img/pexels-photo-194985.jpeg" alt="blac and white picture of a radio microphone">
+        <div id="square-one" class="col-md-6">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
         <div id="square-two" class="col-md-6">
           <h2>Heading</h2>
