more work done.
added some code to the page and css.

--- a/index.html
+++ b/index.html
@@ -38,69 +38,53 @@
 
   <body>
 
-    <!-- Fixed navbar -->
-	
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div id="nav-top" class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse navbar-right">
-          <ul class="nav navbar-nav dropdown-menu-right">
-            <li class="dropdown">
-              <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MENU  <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="hidden"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">contact</a></li>
-              </ul> <!-- /dropdown-menu -->
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-	
-	
-
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div id="title-banner" class="jumbotron">
       <div class="container">
+	<!-- navbar -->
+		<nav id="nav-menu" class="navbar navbar-static-top navbar-clearfix">
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			  </button>
+			</div>
+			<div id="navbar" class="navbar-collapse navbar-right">
+			  <ul class="nav navbar-nav dropdown-menu-right">
+				<li class="dropdown">
+				  <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="hidden"></span></a>
+				  <ul class="dropdown-menu">
+					<li><a href="#">home</a></li>
+					<li><a href="#">about</a></li>
+					<li><a href="#">contact</a></li>
+				  </ul> <!-- /dropdown-menu -->
+				</li>
+			  </ul>
+			</div><!--/.nav-collapse -->
+		</nav><!-- /navbar -->
+	
         <h1>belfast24</h1>
-        <p>polish radio</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p>polish <span class="text-danger">radio</span></p>
+        <p><a class="btn btn-warning" href="#" role="button">Look below <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a></p>
       </div>
     </div>
 
-    <div id="main-content" class="container">
+    <div id="page-content" class="container">
       <!-- Example row of columns -->
       <div class="row">
-        <div id="square-one" class="col-md-6">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+        <div class="col-md-3"></div>
+        <div class="col-md-6 text-center">
+          <h2>About</h2>
+		  <hr style="font-color: #F89406">
+          <p>/ we are brand new, polish community radio in Belfast /<br>
+				/ keep scrooling to see what we are going to play next /<br>
+				/ go even further if you want to get in touch /</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div id="square-two" class="col-md-6">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
+		<div class="col-md-3"></div>
 	  </div>
-	  <div class="row">
-        <div id="square-four" class="col-md-6">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div id="square-five" class="col-md-6">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
       </div>
 	 
       <hr>
