finished overall 1 draft
finished home page looks
added colors, headings and text

--- a/index.html
+++ b/index.html
@@ -71,26 +71,40 @@
       </div>
     </div>
 
-    <div id="page-content" class="container">
+    <div id="page-content">
       <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 text-center">
+      <div id="about" class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 text-center">
           <h2>About</h2>
-		  <hr style="font-color: #F89406">
-          <p>/ we are brand new, polish community radio in Belfast /<br>
-				/ keep scrooling to see what we are going to play next /<br>
-				/ go even further if you want to get in touch /</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		  <hr>
+          <p>we are brand new, polish community radio in Belfast<br>
+			 keep scrooling to see what we are going to play next<br>
+			 go even further if you want to get in touch</p>
         </div>
-		<div class="col-md-3"></div>
+		<div class="col-md-2"></div>
+	  </div>
+	   <div id="playlist" class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 text-center">
+          <h2>Playing Now:</h2>
+		  <hr>
+          <p>Here we are gooing to put your playlist!</p>
+        </div>
+		<div class="col-md-2"></div>
+	  </div>
+	   <div id="contact" class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 text-center">
+          <h2>Contact Us</h2>
+		  <hr>
+          <p>Here we are going to use either a form or few round buttons for social media!</p>
+        </div>
+		<div class="col-md-2"></div>
 	  </div>
       </div>
-	 
-      <hr>
-
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; 2017 majkDesigns, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
