--- a/index.html
+++ b/index.html
@@ -71,38 +71,23 @@
       </div>
     </div>
 
-    <div id="page-content">
-      <!-- Example row of columns -->
-      <div id="about" class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center">
-          <h2>About</h2>
-		  <hr>
-          <p>we are brand new, polish community radio in Belfast<br>
-			 keep scrooling to see what we are going to play next<br>
-			 go even further if you want to get in touch</p>
-        </div>
-		<div class="col-md-2"></div>
-	  </div>
-	   <div id="playlist" class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center">
-          <h2>Playing Now:</h2>
-		  <hr>
-          <p>Here we are gooing to put your playlist!</p>
-        </div>
-		<div class="col-md-2"></div>
-	  </div>
-	   <div id="contact" class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8 text-center">
-          <h2>Contact Us</h2>
-		  <hr>
-          <p>Here we are going to use either a form or few round buttons for social media!</p>
-        </div>
-		<div class="col-md-2"></div>
-	  </div>
-      </div>
+    <div id="page-content" class="container">
+		<!-- Example row of columns -->
+		<div class="row">
+			<div class="col-md-12" style="background-color: #ffffff;">
+				<div class="row">
+					<div id="about" class="col-md-6">
+						<div class="row">
+							<div id="contact" class="col-md-4"></div>
+							<div id="contact" class="col-md-2"></div>
+						</div>
+					</div>
+					<div id="playlist" class="col-md-6"></div>
+				</div>
+			</div>
+		</div> 
+	</div>
+	
       <footer>
         <p>&copy; 2017 majkDesigns, Inc.</p>
       </footer>
