--- a/index.html
+++ b/index.html
@@ -74,16 +74,13 @@
     <div id="page-content" class="container">
 		<!-- Example row of columns -->
 		<div class="row">
-			<div class="col-md-12" style="background-color: #ffffff;">
-				<div class="row">
-					<div id="about" class="col-md-6">
-						<div class="row">
-							<div id="contact" class="col-md-4"></div>
-							<div id="contact" class="col-md-2"></div>
-						</div>
+			<div class="col-md-12">
+				<div id="about" class="col-md-6">
+					<div id="second-row" class="row" style="background-color: #000000;">
+						<div id="contact" class="col-sm-12"></div>
 					</div>
-					<div id="playlist" class="col-md-6"></div>
 				</div>
+				<div id="playlist" class="col-md-6"></div>
 			</div>
 		</div> 
 	</div>
