--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Fixed Top Navbar Example for Bootstrap</title>
+    <title>Radio -- belfast24 --</title>
 
     <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -39,8 +39,8 @@
   <body>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div id="title-banner" class="jumbotron">
-      <div class="container">
+    <div class="jumbotron">
+      <div class="container-fluid">
 	<!-- navbar -->
 		<nav id="nav-menu" class="navbar navbar-static-top navbar-clearfix">
 			<div class="navbar-header">
@@ -70,20 +70,20 @@
         <p><a class="btn btn-warning" href="#" role="button">Look below <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a></p>
       </div>
     </div>
-
+	
+	<!-- main page content -->
     <div id="page-content" class="container">
-		<!-- Example row of columns -->
 		<div class="row">
-			<div class="col-md-12">
-				<div id="about" class="col-md-6">
-					<div id="second-row" class="row" style="background-color: #000000;">
-						<div id="contact" class="col-sm-12"></div>
+			<div class="col-xs-12 col-md-12">
+				<div id="about" class="col-xs-6 col-md-6">
+					<div id="second-row" class="row">
+						<div id="contact" class="col-xs-12 col-sm-12"></div>
 					</div>
 				</div>
-				<div id="playlist" class="col-md-6"></div>
+				<div id="playlist" class="col-xs-6 col-md-6"></div>
 			</div>
 		</div> 
-	</div>
+	</div> <!-- /page-content -->
 	
       <footer>
         <p>&copy; 2017 majkDesigns, Inc.</p>
