--- a/index.html
+++ b/index.html
@@ -40,37 +40,36 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <div class="container-fluid">
-	<!-- navbar -->
-		<nav id="nav-menu" class="navbar navbar-static-top navbar-clearfix">
-			<div class="navbar-header">
-			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </button>
-			</div>
-			<div id="navbar" class="navbar-collapse navbar-right">
-			  <ul class="nav navbar-nav dropdown-menu-right">
-				<li class="dropdown">
-				  <a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="hidden"></span></a>
-				  <ul class="dropdown-menu">
-					<li><a href="#">home</a></li>
-					<li><a href="#">about</a></li>
-					<li><a href="#">contact</a></li>
-				  </ul> <!-- /dropdown-menu -->
-				</li>
-			  </ul>
-			</div><!--/.nav-collapse -->
-		</nav><!-- /navbar -->
-	
-        <h1>belfast24</h1>
-        <p>polish <span class="text-danger">radio</span></p>
-        <p><a class="btn btn-warning" href="#" role="button">Look below <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a></p>
-      </div>
-    </div>
-	
+		<div class="container-fluid">
+		<!-- navbar -->
+			<nav class="navbar navbar-static-top" id="nav-menu">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-right nav navbar-nav">
+						<li class="dropdown">
+							<a href="#"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="hidden"></span></a>
+							<ul class="dropdown-menu">
+								<li class="text-center"><a href="#">home</a></li>
+								<li class="text-center"><a href="#">about</a></li>
+								<li class="text-center"><a href="#">contact</a></li>
+							</ul> <!-- /dropdown-menu -->
+						</li>
+					</ul>
+				</div>
+			</nav><!-- /navbar -->
+		</div><!--/.nav-collapse -->
+	    <h1>belfast24</h1>
+        <p>polish <span class="text-red">radio</span></p>
+        <p><a class="btn btn-warning" href="#" role="button">Look below <span class="glyphicon glyphicon-menu-down" aria-hidden="true"></span></a></p>  
+	</div> <!-- /container -->
+    	
 	<!-- main page content -->
     <div id="page-content" class="container">
 		<div class="row">
