--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
     <div id="page-content" class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-12">
-				<div id="about" class="col-xs-6 col-md-6">
+				<div id="about" class="col-xs-12 col-md-6">
 					<div id="second-row" class="row">
 						<div id="contact" class="col-xs-12 col-sm-12"></div>
 					</div>
 				</div>
-				<div id="playlist" class="col-xs-6 col-md-6"></div>
+				<div id="playlist" class="col-xs-12 col-md-6"></div>
 			</div>
 		</div> 
 	</div> <!-- /page-content -->
-	
-      <footer>
+	<!-- footer -->
+    <div class="container-fluid" id="footer">
+	<footer>
         <p>&copy; 2017 majkDesigns, Inc.</p>
       </footer>
-    </div> <!-- /container -->
-
+	</div><!-- /footer -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
